java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateLocalVariable8.pass
package org.netbeans.test.java.hints;

public abstract class CreateLocalVariable8 {
    
    /** Creates a new instance of AbstractClass */
    public CreateLocalVariable8() {
        String foo = "bar";
        {
            foo = "bar";
        }
    }
    
}
